Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div id="title-box">
 
           <!-- Level 4 'PHARRELL WILLIAMS' Header -->
-       
+       title_box.children.any? 
 
           <!-- Level 2 'HAPPY' Header -->
           <h2>HAPPY</h2>
