Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="wrapper">
+   <h1> <div class="wrapper"> 
       <div id="front" class="album">
         <div id="title-box">
 
@@ -43,3 +43,4 @@
     </div>
   </body>
 </html>
+</h1>
